<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:text="@string/voto"
            android:textAlignment="center"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="156dp">

                <RadioButton
                    android:id="@+id/Rd_btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio1"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <RadioButton
                    android:id="@+id/Rd_btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio2"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <RadioButton
                    android:id="@+id/Rd_btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio3"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="100dp"
            android:text="@string/accion" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/resultado" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>